--- a/packages/ui-library/src/css/reports.scss
+++ b/packages/ui-library/src/css/reports.scss
@@ -23,13 +23,18 @@
     .input-selection-list-tooltip {
         margin: 0 15px 20px 0;
     }
+    .input-textselect {
+        .input-select, .input-text {
+            margin: 0;
+        }
+    }
     .input-text,
     .input-textselect {
         vertical-align: bottom;
-
+    }
+    .input-text {
         input[type=text] {
-            background: $background-color;
-            border-color: $border-color;
+            background-color: $background-color;
         }
     }
     .input-select {
