add css that required hard-coding for Graham's v2 work
Change-Id: I69b91e70128edf223da74355b9855ed7ff381ff3

--- a/packages/ui-library/src/css/details-tooltip.scss
+++ b/packages/ui-library/src/css/details-tooltip.scss
@@ -195,6 +195,10 @@
             }
         }
     }
+    .details-content-header {
+        font-size: 18px;
+        margin-bottom: 20px;
+    }
     &.top {
         > .details-content {
             top: auto;
