--- a/packages/ui-library/src/css/text.scss
+++ b/packages/ui-library/src/css/text.scss
@@ -27,6 +27,11 @@
             &:hover {
                 text-decoration: none;
             }
-        }    
+        }
     }
+}
+
+
+.content-halign-center {
+    text-align: center;
 }
