--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -2642,6 +2642,11 @@ label {
         }
     }
 
+    &.input-width-max {
+        width: 100%;
+        max-width: none;
+    }
+
     &.input-width-xsmall {
         @include input-width-css('xsmall');
     }
