UIP-1407 .hr class that makes a dashed line when applied to an HR tag like <hr class=hr/>
Change-Id: Idff6806b923a390cf66b205bea483898dc19b514

--- a/packages/ui-library/src/css/layout.scss
+++ b/packages/ui-library/src/css/layout.scss
@@ -966,6 +966,13 @@ $layout-nav-width-offset: 15px;
     }
 }
 
+.hr {
+    border: 1px dashed $color-rabbit-fur;
+    margin: 25px 0;
+    height: 0;
+    border-width: 1px 0 0;
+}
+
 // flakey but one of only a few options : use with caution
 .valign-container {
     display: table !important;
