UIP-1421 : add missing bits of css required for the API Clients Config screens
Change-Id: I5af2f6e6b668bdcff3914be9c3315af6292b487b

--- a/packages/ui-library/src/css/globals.scss
+++ b/packages/ui-library/src/css/globals.scss
@@ -27,3 +27,4 @@ $input-font-stack: proxima-nova, sans-serif;
 // MISC
 $layout-header-height: 64px;    // used in miltiple includes
 $layout-nav-width: 190px;       // used in miltiple include
+$line-height-default: 1.3em;
