UIP-1411 : add icon component and new basic and primary text styles -- for v2 roles and permission
Change-Id: I65299cd5ff83e8fc873db59aa993371e455bf76d

--- a/packages/ui-library/src/css/icons.scss
+++ b/packages/ui-library/src/css/icons.scss
@@ -480,3 +480,11 @@
 .icon-welcome:before {
     content: '\77';
 }
+
+
+.icon {
+    @include inline-flex;
+}
+.icon__graphic {
+    padding: 0 8px 0 0;
+}
