--- a/packages/end-user/src/css/components/page.scss
+++ b/packages/end-user/src/css/components/page.scss
@@ -31,7 +31,7 @@
     margin: $spacing-lg;
 }
 
-@media (max-width: $mobile-breakpoint) {
+@media (max-width: $breakpoint-mobile) {
     .page {
         background: white;
     }
