--- a/packages/end-user/src/css/global-vars.scss
+++ b/packages/end-user/src/css/global-vars.scss
@@ -1,11 +1,5 @@
+// SPACING SCALE
 $spacing-base: 10px;
-
-$font-size-s: 13px;
-$font-size-m: 15px;
-$font-size-l: 22px;
-
-$font-default: "proxima-nova", sans-serif;
-
 $spacing-xs: $spacing-base * 0.5;
 $spacing-sm: $spacing-base * 1.0;
 $spacing-md: $spacing-base * 1.5;
@@ -13,6 +7,7 @@ $spacing-lg: $spacing-base * 2.5;
 $spacing-xl: $spacing-base * 4.0;
 $spacing-xx: $spacing-base * 6.5;
 
+// COLOR TOKENS
 $color-primary: #277BA5;
 $color-primary-bright: #3D88AE;
 $color-danger: #DE3602;
@@ -20,3 +15,14 @@ $color-neutral-30: #4D4D4D;
 $color-neutral-40: #666666;
 $color-neutral-50: #808080;
 $color-neutral-100: #ffffff;
+
+// MOBILE
+$breakpoint-mobile: 480px;
+
+// FONTS
+$font-default: "proxima-nova", sans-serif;
+
+// FONT SIZES
+$font-size-s: 13px;
+$font-size-m: 15px;
+$font-size-l: 22px;
