Added branding scheme

--- a/packages/end-user/src/css/components/_feedback.scss
+++ b/packages/end-user/src/css/components/_feedback.scss
@@ -8,3 +8,8 @@
 .feedback__icon {
     margin-right: $spacing-sm;
 }
+
+.feedback__message {
+    // this is here to make text wrap properly in IE10 -jfal
+    flex-shrink: 1;
+}
