--- a/packages/end-user/src/css/styles.scss
+++ b/packages/end-user/src/css/styles.scss
@@ -3,20 +3,20 @@
   box-shadow: 0 0 6px 0 $color-primary-bright;
 }
 
-@import "./global-vars.scss";
-@import "./fonts.scss";
-@import "./text.scss";
-@import "./input-vars.scss";
+@import "./_global-vars.scss";
+@import "./_fonts.scss";
+@import "./_text.scss";
+@import "./_input-vars.scss";
 
-@import "./components/button.scss";
-@import "./components/card.scss";
-@import "./components/checkbox.scss";
-@import "./components/float-label.scss";
-@import "./components/org-logo.scss";
-@import "./components/page.scss";
-@import "./components/stack.scss";
-@import "./components/text-input.scss";
-@import "./components/feedback.scss";
+@import "./components/_button.scss";
+@import "./components/_card.scss";
+@import "./components/_checkbox.scss";
+@import "./components/_float-label.scss";
+@import "./components/_org-logo.scss";
+@import "./components/_page.scss";
+@import "./components/_stack.scss";
+@import "./components/_text-input.scss";
+@import "./components/_feedback.scss";
 
 body {
     margin: 0;
