--- a/packages/end-user/src/css/components/_checkbox.scss
+++ b/packages/end-user/src/css/components/_checkbox.scss
@@ -7,6 +7,7 @@ $checkbox-check-color: $color-neutral-30;
 
     font-size: $font-size-s;
     color: $checkbox-check-color;
+    display: inline-block;
 }
 
 .checkbox > :first-child {
