UIP-1412 : add helper "pipe" class / tweak accepted proptypes for common form inputs (allow objects and arrays - for new parentless rendering)
Change-Id: I858c26f681d8edec2eaf72338dfc1592ab4fd47d

--- a/packages/ui-library/src/css/text.scss
+++ b/packages/ui-library/src/css/text.scss
@@ -47,3 +47,15 @@
     color: $color-slate;
     font-size: 15px;
 }
+
+.pipe {
+    &:before {
+        content: "";
+        height: 1.2em;
+        width: 1px;
+        margin: 0 $spacing-sm;
+        display: inline-block;
+        vertical-align: middle;
+        background-color: $color-rabbit-fur;
+    }
+}
