--- a/packages/end-user/src/css/_input-vars.scss
+++ b/packages/end-user/src/css/_input-vars.scss
@@ -1,8 +1,8 @@
 // INPUTS
-$input-font-size: $font-size-m;
-$input-font-weight: 550;
+$input-font-size: $font-size-md;
+$input-font-weight: 600;
 $input-text-color: $color-neutral-30;
-$input-border-color: $color-neutral-50;
+$input-border-color: $color-neutral-40;
 $input-padding-vertical: $spacing-md;
 $input-padding-horizontal: $spacing-sm;
 $input-focus-border-color: $color-primary;
