--- a/packages/end-user/src/css/styles.scss
+++ b/packages/end-user/src/css/styles.scss
@@ -6,15 +6,16 @@
 @import "./_global-vars.scss";
 @import "./_fonts.scss";
 @import "./_text.scss";
+@import "./_spacing.scss";
 @import "./_input-vars.scss";
 
 @import "./components/_button.scss";
 @import "./components/_card.scss";
 @import "./components/_checkbox.scss";
 @import "./components/_float-label.scss";
+@import "./components/_form.scss";
 @import "./components/_org-logo.scss";
 @import "./components/_page.scss";
-@import "./components/_stack.scss";
 @import "./components/_text-input.scss";
 @import "./components/_feedback.scss";
 
