--- a/packages/end-user/src/css/_text.scss
+++ b/packages/end-user/src/css/_text.scss
@@ -1,6 +1,6 @@
 %error-text,
 .error-text {
     font-family: $font-default;
-    font-size: $font-size-m;
-    color: $color-danger;
+    font-size: $font-size-md;
+    color: $color-critical;
 }
