--- a/packages/ui-library/src/css/text.scss
+++ b/packages/ui-library/src/css/text.scss
@@ -34,7 +34,7 @@
     text-align: center;
 }
 
-.text {
+.textblock {
     color: $color-elephant;
     font-size: 14px;
     margin: 0 0 10px;
@@ -43,7 +43,7 @@
         margin-bottom: 0;
     }
 }
-.text--primary {
+.textblock--primary {
     color: $color-slate;
     font-size: 15px;
 }
