--- a/packages/end-user/src/css/components/_float-label.scss
+++ b/packages/end-user/src/css/components/_float-label.scss
@@ -9,7 +9,7 @@ $float-label-color: $color-neutral-30;
     }
 
     position: relative;
-    display: inline-block;
+    display: block;
 }
 
 .float-label__label {
