--- a/packages/end-user/src/css/_text.scss
+++ b/packages/end-user/src/css/_text.scss
@@ -1,6 +1,34 @@
-%error-text,
-.error-text {
+%normal-text,
+.normal-text {
     font-family: $font-default;
     font-size: $font-size-md;
-    color: $color-critical;
+    color: $color-neutral-20;
+}
+
+%heading-text,
+.heading-text {
+    font-family: $font-default;
+    font-size: $font-size-lg;
+    font-weight: 400;
+    color: $color-neutral-20;
+}
+
+.heading {
+    @extend %heading-text;
+    text-align: center;
+    margin-top: 0;
+    margin-bottom: $spacing-lg;
+}
+
+.heading--4 {
+    font-size: $font-size-md;
+    margin-bottom: $spacing-md;
+}
+
+%tiny-text,
+.tiny-text {
+    font-family: $font-default;
+    font-size: $font-size-xs;
+    font-weight: 200;
+    color: $color-neutral-20;
 }
