--- a/packages/end-user/src/css/styles.scss
+++ b/packages/end-user/src/css/styles.scss
@@ -7,17 +7,21 @@
 @import "./_fonts.scss";
 @import "./_text.scss";
 @import "./_spacing.scss";
-@import "./_input-vars.scss";
+
+@import "./common/_inputs.scss";
+@import "./common/_icon-pairs.scss";
 
 @import "./components/_button.scss";
 @import "./components/_card.scss";
 @import "./components/_checkbox.scss";
+@import "./components/_feedback.scss";
 @import "./components/_float-label.scss";
 @import "./components/_form.scss";
 @import "./components/_org-logo.scss";
 @import "./components/_page.scss";
+@import "./components/_requirements.scss";
 @import "./components/_text-input.scss";
-@import "./components/_feedback.scss";
+@import "./components/_tooltip.scss";
 
 body {
     margin: 0;
